some work on controllers but not sure if they work

--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Invoices#new</h1>
-<p>Find me in app/views/invoices/new.html.erb</p>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-lg-6  ">
+      <h2>Please put in the information of your new drug</h2>
+      <%= simple_form_for @invoice do |f| %>
+        <%= f.input :drug_name, input_html: { class: "form-input" } , label: "Name" %>
+
+        <%= f.button :submit, class: 'btn btn-primary' %>
+      <% end %>
+    </div>
+  </div>
+</div>
