--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Invoices#index</h1>
-<p>Find me in app/views/invoices/index.html.erb</p>
+<% @invoice.each do |invoice| %>
+  <p> <%= invoice.invoice_id %> </p>
+<% end %>
