--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,58 @@
-<html>
+<html lang="EN">
+  <head>
+    <meta charset="utf-8">
+    <title>Suscrimed la farmacia que no me olvida</title>
+    <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Varela">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
 
-<h1>Hola</h1>
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- Leave those next 4 lines if you care about users using IE8 -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <!--Navbar-->
+    <div class="navbar-minimalist">
+      <div class="logo-align">
+        <img src="images/suscrimed-logo-full.png" alt="logo">
+      </div>
+      <div class="cta-align">
+        <a class="phone-blue" href="">Llamar: 55-8936-1305</a>
+        <a class="get-started-header" href="">Empezar</a>
+      </div>
+    </div>
+     <!--Alert-->
+    <div class="hero-offer alert alert-warning">
+        Recibe 5% de descuento en tu primer pedido
+    </div>
+    <!--Hero Section-->
+    <div class="hero-section" style="background-image: url(images/Suscrimed-Backround.jpg);">
+      <div class="wrapper">
+        <img class="small-logo" src="images/suscrimed-logo-full.png" alt="logo">
+        <p class="small-text">🇲🇽 La farmacia en línea #1 de México</p>
+        <h1 class="hero-heading">Envió Gratis En Todo México</h1>
+        <p class="normal">Ahorra tiempo y dinero, nosotros nos encargamos de tu salud</p>
+        <p class="hero-text-start">Empieza hablando con nosotros en WhatsApp</p>
+        <a class="get-started-header" href="">Haz tu primer pedido</a>
+         <p class="privacy-policy">Al proceder aceptas nuestros <a href="">Términos y condiciones </a> y <a href="">Aviso de privacidad</a></p>
+      </div>
+
+      <div class="star-rating-wrapper">
+        <span class="star-rating__icons">⋆ ⋆ ⋆ ⋆ ⋆</span>
+        <p class="star-rating-text">4.9 Estrellas en Google & Facebook</p>
+      </div>
+    </div>
+    <!-- code a "How it works" section -->
+    <div class="container">
+
+    </div>
+
+  </body>
 
 </html>
