--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,13 +1,11 @@
 // Import your components CSS files here.
-@import "alert";
-@import "avatar";
 @import "navbar";
-@import "card";
-@import "banner";
-@import "form";
-@import "login";
-@import "home";
-@import "button";
+@import "hero";
+
+
+
+
+
 
 
 
