--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,8 +1,9 @@
 // Import your components CSS files here.
 @import "navbar";
 @import "hero";
-
-
+@import "button";
+@import "icons_section";
+@import "how_it_works_sections";
 
 
 
