--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,7 +1,7 @@
    <div  onclick="toggleSideBar()" id="overlay" class=""></div>
    <div class="navbar" >
        <div class="logo" >
-           <h1>LOGO</h1>
+           <%= image_tag "nav-logo.png", width: 50 %>
        </div>
        <ul class="nav_links_left ">
            <h3 onclick="toggleSideBar()" class="sidebar_close_button" >Close</h3>
