--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,56 +1,61 @@
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
 /*COLORS*/
-
-$light-blue: #00aaff;
-$white: #ffffff;
-$black: #000000;
-
-.button{
-    width: 100px;
-    padding: 10px;
-    border-radius: 4px;
-    border: none;
-    font-family: 'Varela Round', sans-serif;
-    font-weight: 550;
-    cursor: pointer;
-
-    &:hover{
-        box-shadow: 0px 0px 12px 0px $light-blue;
-        transition: ease 0.3s;
-    }
-    &:focus{
-        outline: none;
-    }
-}
-.button_fill_primary{
-    background-color:$light-blue ;
-    color: $white;
-}
-.button_fill_default{
-    background-color:$white ;
-    color: $black;
-}
-.button_outline_default{
-    color: $white;
-    border: 2px $white solid;
-    background-color: $light-blue ;
-}
-.button_outline_primary{
-    color: $black;
-    border: 2px $light-blue solid;
-    background-color: $white ;
-}
-.button_outline_radius_primary{
-    color: $black;
-    border: 2px $light-blue solid;
-    background-color: $white ;
-    border-radius: 20px;
+.button {
+  width: 100px;
+  padding: 10px;
+  border-radius: 4px;
+  border: none;
+  font-family: 'Varela Round', sans-serif;
+  font-weight: 550;
+  cursor: pointer;
 }
 
-.w_shadow{
-    &:hover{
-        box-shadow: 0px 0px 7px 0px $white;
-        transition: ease 0.3s;
-    }
+.button:hover {
+  -webkit-box-shadow: 0px 0px 12px 0px #00aaff;
+          box-shadow: 0px 0px 12px 0px #00aaff;
+  -webkit-transition: ease 0.3s;
+  transition: ease 0.3s;
+  text-decoration: none;
 }
+
+.button:focus {
+  outline: none;
+}
+
+.button_fill_primary {
+  background-color: #00aaff;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.button_fill_default {
+  background-color: #ffffff;
+  color: #000000;
+}
+
+.button_outline_default {
+  color: #ffffff;
+  border: 2px #ffffff solid;
+  background-color: #00aaff;
+}
+
+.button_outline_primary {
+  color: #000000;
+  border: 2px #00aaff solid;
+  background-color: #ffffff;
+}
+
+.button_outline_radius_primary {
+  color: #000000;
+  border: 2px #00aaff solid;
+  background-color: #ffffff;
+  border-radius: 20px;
+}
+
+.w_shadow:hover {
+  -webkit-box-shadow: 0px 0px 7px 0px #ffffff;
+          box-shadow: 0px 0px 7px 0px #ffffff;
+  -webkit-transition: ease 0.3s;
+  transition: ease 0.3s;
+}
+/*# sourceMappingURL=button.css.map */
