--- a/app/assets/stylesheets/components/_hero.scss
+++ b/app/assets/stylesheets/components/_hero.scss
@@ -36,6 +36,7 @@
   margin: 0 auto;
   text-shadow: 1px 1px 0 rgba(255,255,255,.9);
   text-align: center;
+   font-family: 'Montserrat';
  /* margin-block-start: 0.67em;
   margin-block-end: 0.67em;*/
 }
@@ -77,7 +78,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(90,62,204,.04);
+  background-color: rgba(0,170,255,.04);
   padding: 1rem 1.2rem;
   width: 100%;
 }
