--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,6 +3,10 @@
 // For example:
 $red: #FD1015;
 $blue: #167FFB;
+$light-blue: #0af;
+$white: #ffffff;
+$black: #333333;
+
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
