--- a/app/assets/stylesheets/components/_hero.scss
+++ b/app/assets/stylesheets/components/_hero.scss
@@ -15,6 +15,11 @@
   color: #0088CC;
 }
 
+.alert{
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+
 .normal {
   opacity: .7;
   font-size: 1.6rem;
@@ -36,7 +41,7 @@
   margin: 0 auto;
   text-shadow: 1px 1px 0 rgba(255,255,255,.9);
   text-align: center;
-   font-family: 'Montserrat';
+  font-family: 'Montserrat';
  /* margin-block-start: 0.67em;
   margin-block-end: 0.67em;*/
 }
