--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,18 +10,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- Leave those next 4 lines if you care about users using IE8 -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
   </head>
   <body>
-    <!--Navbar-->
 
      <!--Alert-->
-    <div class="center hero-offer alert alert-warning">
+    <div class="text-center hero-offer alert alert-warning">
         Recibe 5% de descuento en tu primer pedido
     </div>
     <!--Hero Section-->
@@ -59,7 +53,7 @@
                  <span class="item_header" > Ordena tus medicamentos</span>
                  <p class="item_text" >Encuentra tus medicamentos</p>
             </li>
-            <li class="item" ><img class="img" src="<%= asset_path 'calendario_home.svg' %>" >
+            <li class="item" ><img class="img" src="<%= asset_path 'calendario_home.svg'   %>" >
                  <span class="item_header" > Agenda tus proximas entregas</span>
                  <p class="item_text" >Toma menos de 2 minutos</p>
             </li>
@@ -67,9 +61,15 @@
                  <span class="item_header" >Envio gratis</span>
                  <p class="item_text" >Recibe tus medicamentos sin costo adicional. Solo pagas por tus medicinas</p>
             </li>
+
         </div>
-        <button class="btn btn-primary" >Haz tu primer pedido</button>
+        <div class="text-center">
+          <button class="btn btn-primary" >Haz tu primer pedido</button>
+        </div>
+
     </div>
+  <!-- code a "How it works" section -->
+
 
 
   </body>
