--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -3,7 +3,8 @@
     <div class="col-lg-6  ">
       <h2>Please put in the information of your new drug</h2>
       <%= simple_form_for @invoice do |f| %>
-        <%= f.input :drug_name, input_html: { class: "form-input" } , label: "Name" %>
+        <%= f.input :frequency, input_html: { class: "form-input" } , label: "Name" %>
+        <%= f.number :quantity, input_html: { class: "form-input" } , label: "Name" %>
 
         <%= f.button :submit, class: 'btn btn-primary' %>
       <% end %>
