--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -6,9 +6,12 @@ $blue: #167FFB;
 $light-blue: #0af;
 $white: #ffffff;
 $black: #333333;
+$black-darker: #000;
+$sea-blue:  #00334D;
+$grey: #b8b8b8;
 
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
-$gray: #0E0000;
+
 $light-gray: #F4F4F4;
