--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -7,28 +7,25 @@
            <h3 onclick="toggleSideBar()" class="sidebar_close_button" >Close</h3>
        <div class="nav_links" >
            <li class="nav_link_el" >
-              <a  href="#"> How it works</a>
+              <a  href="#"> Suscripcion</a>
            </li>
            <li class="nav_link_el" >
-               <a  href="#"> Pricing</a>
+               <a  href="#"> Farmacia</a>
            </li>
            <li class="nav_link_el" >
-               <a  href="#"> Reviews</a>
+               <a  href="#"> Reseñas</a>
            </li>
            <li class="nav_link_el" >
-               <a  href="#"> Folks</a>
+               <a  href="#"> Blog</a>
            </li>
        </div>
        </ul>
        <ul class="nav_links_right ">
            <li class="nav_link_el responsive_links" >
-               <a  href="#"> Help</a>
-           </li>
-           <li class="nav_link_el responsive_links" >
-               <a  href="#"> Sign In</a>
+               <a  href="#">Inicia Sesión</a>
            </li>
            <li class=" btn_action nav_link_el " >
-               <button class="button button_fill_primary" >Get started</button>
+               <button class="button button_fill_primary" >Empezar</button>
            </li>
             <li  class=" btn_menu nav_link_el button" >
                <h3 onclick="toggleSideBar()" class=" responsive_links sidebar_open_button" >Menu</h3>
