--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
   <body>
 
      <!--Alert-->
-    <div class="text-center hero-offer alert alert-warning">
+    <div class="text-center hero-offer alert alert-warning mb-0">
         Recibe 5% de descuento en tu primer pedido
     </div>
     <!--Hero Section-->
