--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+
 
 /* COLORS */
-$white: #ffffff;
-$sea-blue:  #00334D;
-$grey: #b8b8b8;
+
 
 body, html{
   margin: 0;
-  font-family: 'Roboto', sans-serif;
   height: 100%;
+
 }
 .btn_action{
   display: flex;
@@ -24,10 +25,13 @@ body, html{
   display: flex;
   width: auto;
   min-width: 300px;
-  height: 120px;
+  height: 100px;
   top: 0;
   background-color: $white;
   position: sticky;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: rgba(0, 0, 0, 0.08);
 
   .logo{
     padding-left: 2%;
@@ -46,6 +50,9 @@ body, html{
       flex: 1;
       flex-direction: row;
       align-items: center;
+      font-family: "Poppins";
+      font-size: 15px;
+      font-weight: 100;
     }
     .sidebar_close_button{
       display: none;
@@ -62,6 +69,9 @@ body, html{
      align-items: center;
      @media screen and (max-width: 600px) {
       margin-left: -80px;
+      color: $black-darker;
+      display: flex;
+      align-self: flex-start;
     }
     .btn_menu{
       cursor: pointer;
@@ -72,8 +82,10 @@ body, html{
 }
   .nav_link_el{
     margin: 20px;
-    font-weight: 600;
+    font-weight: 300;
+    font-family: "Poppins";
     list-style-type: none;
+    font-size: 15px;
 
     .btn_action{
      margin-top: -15px !important;
@@ -81,7 +93,7 @@ body, html{
     }
     a{
       text-decoration: none;
-      color: $sea-blue;
+      color: $black-darker;
     }
   }
 }
@@ -126,9 +138,12 @@ body, html{
         }
       }
       .nav_link_el{
+      font-family: "Poppins";
+      color: $black-darker;
+      font-weight: 400;
       display: flex;
       align-self: flex-start;
-      font-size: 25px;
+      font-size: 15px;
     }
     .sidebar_close_button{
       display: flex;
@@ -164,4 +179,8 @@ body, html{
   background-color: rgba(0,0,0,0.5);
   z-index: 1;
   cursor: pointer;
+}
+
+.nav_link_el:hover {
+  color: red;
 }
