--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -7,16 +7,16 @@
            <h3 onclick="toggleSideBar()" class="sidebar_close_button" >Close</h3>
        <div class="nav_links" >
            <li class="nav_link_el" >
-              <a  href="#"> Suscripcion</a>
+              <a class="nav_id"  href="#"> Suscripcion</a>
            </li>
            <li class="nav_link_el" >
-               <a  href="#"> Farmacia</a>
+               <a class="nav_id" href="#"> Farmacia</a>
            </li>
            <li class="nav_link_el" >
-               <a  href="#"> Reseñas</a>
+               <a class="nav_id" href="#"> Reseñas</a>
            </li>
            <li class="nav_link_el" >
-               <a  href="#"> Blog</a>
+               <a class="nav_id" href="#"> Blog</a>
            </li>
        </div>
        </ul>
