--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -22,13 +22,25 @@
        </ul>
        <ul class="nav_links_right ">
            <li class="nav_link_el responsive_links" >
-               <a  href="#">Inicia Sesión</a>
+          <% if user_signed_in? %>
+
+
+            <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+            </div>
+          <% else %>
+
+          <%= link_to 'Inicia Sesión', new_user_session_path  %>
            </li>
            <li class=" btn_action nav_link_el " >
                <button class="button button_fill_primary" >Empezar</button>
            </li>
+          <!--  que es esto -->
             <li  class=" btn_menu nav_link_el button" >
                <h3 onclick="toggleSideBar()" class=" responsive_links sidebar_open_button" >Menu</h3>
             </li>
+          <% end %>
        </ul>
 </div>
