--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -21,6 +21,8 @@ body, html{
 }
 
 
+
+
 .navbar{
   display: flex;
   width: auto;
@@ -183,6 +185,10 @@ body, html{
   background-color: rgba(0,0,0,0.5);
   z-index: 1;
   cursor: pointer;
+}
+
+.navbar-collapse {
+  flex-grow: 0;
 }
 
 
