--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -10,7 +10,7 @@
               <a class="nav_id"  href="#"> Suscripcion</a>
            </li>
            <li class="nav_link_el" >
-               <a class="nav_id" href="#"> Farmacia</a>
+               <a class="nav_id" href="/drugs"> Farmacia</a>
            </li>
            <li class="nav_link_el" >
                <a class="nav_id" href="#"> Reseñas</a>
@@ -23,9 +23,9 @@
        <ul class="nav_links_right" style="list-style: none;">
           <% if user_signed_in? %>
             <li class="dropdown nav-item dropdown">
-              <button class="btn btn-primary dropdown-toggle " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             <!--  <button class="btn btn-primary dropdown-toggle " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Perfil
-              </button>
+              </button> -->
 
                   <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
 
