--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
         <h1 class="hero-heading">Envió Gratis En Todo México</h1>
         <p class="normal">Ahorra tiempo y dinero, nosotros nos encargamos de tu salud</p>
         <p class="hero-text-start">Empieza hablando con nosotros en WhatsApp</p>
-        <a class="button button_fill_primary" href="">Haz tu primer pedido</a>
+        <a class="button button_fill_primary" href="/drugs">Haz tu primer pedido</a>
          <p class="privacy-policy">Al proceder aceptas nuestros <a href="">Términos y condiciones </a> y <a href="">Aviso de privacidad</a></p>
       </div>
 
@@ -64,7 +64,7 @@
 
         </div>
         <div class="text-center">
-          <button class="btn btn-primary" >Haz tu primer pedido</button>
+          <button class="btn btn-primary" href="/drugs" >Haz tu primer pedido</button>
         </div>
 
     </div>
