--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,8 +8,9 @@
 @import "search_bar";
 @import "card_drug";
 @import "card_show";
-
-
+@import "logos";
+@import "benefits";
+@import "cta_home";
 
 
 
