--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,10 +38,10 @@
     <!-- code a "Icons" section -->
       <div class="icon_section" >
           <ul class="icons" >
-              <li class="icon" ><img class="user_icon" src="<%= asset_path 'user.svg' %>" > <span class="icon_text" > Lorem ipsum dolor</span></li>
-              <li class="icon" ><img class="user_icon" src="<%= asset_path 'user.svg' %>" > <span class="icon_text" > Lorem ipsum dolor</span></li>
-              <li class="icon" ><img class="user_icon" src="<%= asset_path 'user.svg' %>" > <span class="icon_text" > Lorem ipsum dolor</span></li>
-              <li class="icon" ><img class="user_icon" src="<%= asset_path 'user.svg' %>" > <span class="icon_text" > Lorem ipsum dolor</span></li>
+              <li class="icon" ><img class="user_icon" src="<%= asset_path 'user.svg' %>" > <span class="icon_text" > Recargas y renovaciones automáticas</span></li>
+              <li class="icon" ><img class="user_icon" src="<%= asset_path 'user.svg' %>" > <span class="icon_text" > Olvídate de salir de nuevo a la farmacia</span></li>
+              <li class="icon" ><img class="user_icon" src="<%= asset_path 'user.svg' %>" > <span class="icon_text" > Factura electrónica</span></li>
+              <li class="icon" ><img class="user_icon" src="<%= asset_path 'user.svg' %>" > <span class="icon_text" > Empaque discreto </span></li>
           </ul>
       </div>
 
@@ -68,7 +68,35 @@
         </div>
 
     </div>
-  <!-- code a "How it works" section -->
+  <!-- Por quien -->
+    <div class="references" >
+        <div class="references_content" >
+            <h3 class="title" >Voluptas voluore, deserunt sequi ducimus!</h1>
+            <h4 class="sub_title" >Subtitle</h3>
+            <span  class="line" ></span>
+            <div class="brands" >
+                <h5 class="brand" >Brand logo</h4>
+                <h5 class="brand" >Brand logo</h4>
+                <h5 class="brand" >Brand logo</h4>
+                <h5 class="brand" >Brand logo</h4>
+                <h5 class="brand" >Brand logo</h4>
+
+            </div>
+        </div>
+    </div>
+     <!-- benefisios -->
+
+    <!-- benefisios -->
+    <div  >
+        <div class="card_content" >
+            <h1 class="card_title" >Nuestro servicio es gratuito. Solo pagas por tus medicamentos</h1>
+            <button class=" button button_fill_default" href="/drugs">Haz tu primer pedido</button>
+            <span class="card_text" ><strong>¿Prefieres hablar por teléfono?</strong><p class="sub_text" >Habla con nuestro equipo de atención hoy</p></span>
+            <button class=" button button_outline_default" > 800-HOLA-SUS</button>
+        </div>
+      </div>
+
+
 
 
 
