--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,5 @@
 // Import your components CSS files here.
-@import "navbar";
+
 @import "hero";
 @import "button";
 @import "icons_section";
@@ -11,6 +11,7 @@
 @import "logos";
 @import "benefits";
 @import "cta_home";
-
+@import "footer";
+@import "navbar";
 
 
