--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -165,7 +165,7 @@ body, html{
         width: 100%;
         margin-left: -50px;
         @media screen and (max-width: 400px ) {
-          margin-left: 30px;
+        margin-left: 30px;
         }
       }
       .nav_link_el{
@@ -208,12 +208,13 @@ body, html{
   right: 0;
   bottom: 0;
   background-color: rgba(0,0,0,0.5);
-  z-index: 1;
+  z-index: 0;
   cursor: pointer;
 }
 
-.navbar-collapse {
-  flex-grow: 0;
+.dropdown-menu{
+  margin-right: 140px;
 }
+
 
 
