--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -22,18 +22,17 @@
        </ul>
        <ul class="nav_links_right" style="list-style: none;">
           <% if user_signed_in? %>
-            <li class="dropdown nav-item dropdown">
-             <!--  <button class="btn btn-primary dropdown-toggle " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Perfil
-              </button> -->
 
-                  <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <li class="dropdown nav-item dropdown">
+            <button class="btn button_fill_primary dropdown-toggle " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            </button>
 
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <%= link_to "Editar Perfil", edit_user_registration_path, class: "dropdown-item" %>
-                  <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-                </div>
-            </li>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <%= link_to "Editar Perfil", edit_user_registration_path, class: "dropdown-item" %>
+              <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            </div>
+          </li>
           <% else %>
           <li class="nav_link_register">
               <%= link_to 'Registrate!', new_user_registration_path  %> <br>
