--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,12 +1,31 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-lg-6  ">
-      <h2>Please put in the information of your new drug</h2>
-      <%= simple_form_for @invoice do |f| %>
-        <%= f.input :drug_name, input_html: { class: "form-input" } , label: "Name" %>
+    <div class="col-lg-6">
+      <h2>Detalles de su orden: </h2>
 
-        <%= f.button :submit, class: 'btn btn-primary' %>
+        <%= simple_form_for @invoice do |f| %>
+          <% @invoice_details.each do |invoice_detail| %>
+            <%= f.simple_fields_for :invoice_details do |i| %>
+                <%= i.label invoice_detail.drug.drug_name %>
+                <%= i.input :quantity, input_html: { value: invoice_detail.quantity } %>
+                <%= i.input :subtotal, input_html: { value: invoice_detail.subtotal } %>
+                <%= i.input :drug_id, as: :hidden, input_html: { value: invoice_detail.drug.id } %>
+
+            <% end %>
+        <% end %>
+
+          <%= f.input :frequency, collection: ['Semanal', 'Mensual', 'Trimestral'] %>
+
+
+        <div class="footer">
+          <%= f.submit "Proceder a pagar", class: 'btn btn-primary' %>
+        </div>
       <% end %>
     </div>
   </div>
 </div>
+
+
+<!-- en new vamos a tener una forma con simple for accion create
+
+parsear las drugas que estan en session[:cart] -->
