--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -75,7 +75,7 @@ body, html{
         }
         .search_bar_2_logo{
             filter: invert(100%);
-            width: 20px;
+            // width: 20px;
         }
         .circle_search_bar {
             align-self: center;
@@ -89,6 +89,7 @@ body, html{
             color: #000;
             text-align: center;
             font: 32px Arial, sans-serif;
+            display: flex;
           }
     }
 
