--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -54,23 +54,7 @@
         </div>
 
     </div>
-  <!-- Por quien -->
-    <div class="references" >
-        <div class="references_content" >
-            <h3 class="title" >Voluptas voluore, deserunt sequi ducimus!</h1>
-            <h4 class="sub_title" >Subtitle</h3>
-            <span  class="line" ></span>
-            <div class="brands" >
-                <h5 class="brand" >Brand logo</h4>
-                <h5 class="brand" >Brand logo</h4>
-                <h5 class="brand" >Brand logo</h4>
-                <h5 class="brand" >Brand logo</h4>
-                <h5 class="brand" >Brand logo</h4>
-
-            </div>
-        </div>
-    </div>
-     <!-- benefisios -->
+     <%= render "components/logos"  %>
 
     <!-- benefisios -->
     <div  >
