[FIX] Bad comment fixed

--- a/app/views/components/_logos.html.erb
+++ b/app/views/components/_logos.html.erb
@@ -1,4 +1,4 @@
-//Added this because js not working without, dont know why. Feel free to improve this solution.
+<!-- Added this because js not working without, dont know why. Feel free to improve this solution. -->
 <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
 
 <!-- Por quien -->
