[ADD] Stats card

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,6 +9,7 @@
 @import "card_drug";
 @import "card_show";
 @import "logos";
+@import "stats_card";
 @import "benefits";
 @import "cta_home";
 @import "footer";
