--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -54,6 +54,8 @@
         </div>
 
     </div>
+     <%= render "components/stats"  %>
+
      <%= render "components/logos"  %>
 
     <!-- benefisios -->
