--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,6 +10,7 @@
 @import "card_show";
 @import "logos";
 @import "stats_card";
+@import "login";
 @import "benefits";
 @import "cta_home";
 @import "footer";
