--- a/app/assets/stylesheets/components/_logos.scss
+++ b/app/assets/stylesheets/components/_logos.scss
@@ -67,7 +67,7 @@ $black-darker: #000;
             }
           .brand{
               padding: 20px;
-              min-width: 75px;
+              max-width: 200px;
               margin-top: -25px;
               cursor: pointer;
               opacity: 0.4;
