--- a/app/views/components/_logos.html.erb
+++ b/app/views/components/_logos.html.erb
@@ -28,11 +28,11 @@
     </div>
     <span  class="line" ></span>
     <div class="brands" >
-      <img alt="brand_1" class="brand title_1  " src="<%= asset_path 'news1.svg' %>" >
-      <img alt="brand_2" class="brand title_2 " src="<%= asset_path 'news2.svg' %>" >
-      <img alt="brand_3" class="brand title_3 active" src="<%= asset_path 'news3.svg' %>" >
-      <img alt="brand_4" class="brand title_4 " src="<%= asset_path 'news4.svg' %>" >
-      <img alt="brand_5" class="brand title_5" src="<%= asset_path 'news5.svg' %>" >
+      <img alt="brand_1" class="brand title_1  " src="<%= asset_path 'econo.svg' %>" >
+      <img alt="brand_2" class="brand title_2 " src="<%= asset_path 'gnp.svg' %>" >
+      <img alt="brand_3" class="brand title_3 active" src="<%= asset_path 'Nadro.svg' %>" >
+      <img alt="brand_4" class="brand title_4 " src="<%= asset_path 'map.svg' %>" >
+      <img alt="brand_5" class="brand title_5" src="<%= asset_path 'econo.svg' %>" >
     </div>
   </div>
 </div>
