--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -59,4 +59,8 @@
   -webkit-transition: ease 0.3s;
   transition: ease 0.3s;
 }
+
+.bigger{
+  width: 166px;
+}
 /*# sourceMappingURL=button.css.map */
