[ADD] cart 80 % done

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,7 +58,10 @@
 
      <%= render "components/logos"  %>
 
-    <!-- benefisios -->
+     <%= render "components/cart"  %>
+
+
+     <!-- benefisios -->
     <div  >
         <div class="card_content" >
             <h1 class="card_title" >Nuestro servicio es gratuito. Solo pagas por tus medicamentos</h1>
