[ADD] signup form

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,3 +1,4 @@
+/*
 .footer-clean {
   padding:50px 0;
   background-color:#fff;
@@ -98,3 +99,4 @@
   border-top-style: solid;
   border-top-color: rgba(0, 0, 0, 0.08);
 }
+*/
