--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,9 +11,11 @@
 @import "logos";
 @import "stats_card";
 @import "login";
+@import "sign_up";
 @import "benefits";
 @import "cta_home";
 @import "footer";
+@import "footer2";
 @import "navbar";
 @import "cart";
 
