--- a/app/views/components/_cart.html.erb
+++ b/app/views/components/_cart.html.erb
@@ -1,29 +1,39 @@
-<div class="cart_page" >
+
+
+<div>
+  <div class="steps" >
+    <div class="steps" ></div>
+  </div>
+  <div class="cart_page">
   <!-- Cart -->
-  <div class="cart_section" >
-    <h1 class="title" >Your cart</h1>
-    <div class="line" ></div>
-    <div class="articles_section" >
+  <div class="cart_section">
+    <div class="header" >
+    <h1 class="title">Your cart</h1>
+      <span class="next_button" >Next</span>
+    </div>
+    <div class="line"></div>
+    <div class="articles_section">
       <table style="width:100%">
         <tr>
           <td>
-            <div class="cart_article" >
-              <div class="cart_article_content" >
-                <div class="cart_article_texts" >
-                  <div class="" >
+            <div class="cart_article">
+              <div class="cart_article_content">
+                <div class="cart_article_texts">
+                  <div class="">
                     <img class="cart_article_img" src="<%= asset_path 'imagen-no-disponible.jpg' %>">
                   </div>
                   <div>
                     <h1 class="cart_article_title">Product title here</h1>
-                    <h4 class="cart_article_sub" >Product description here</h4>
-                    <div class="cart_article_qty" >
-                      <div class="cart_article_qty_selector" ><span class="minus" >-</span>  <span class="qty">1</span> <span class="plus" >+</span></div>
+                    <h4 class="cart_article_sub">Product description here</h4>
+                    <div class="cart_article_qty">
+                      <div class="cart_article_qty_selector"><span class="minus">-</span> <span class="qty">1</span>
+                        <span class="plus">+</span></div>
                     </div>
                   </div>
                 </div>
-                <div class="prices" >
-                  <h3 class="cart_article_price" >1 x $1,820.00</h3>
-                  <h2 class="cart_article_price_2" >$1,820.00</h2>
+                <div class="prices">
+                  <h3 class="cart_article_price">1 x $1,820.00</h3>
+                  <h2 class="cart_article_price_2">$1,820.00</h2>
                 </div>
               </div>
             </div>
@@ -31,23 +41,24 @@
         </tr>
         <tr>
           <td>
-            <div class="cart_article" >
-              <div class="cart_article_content" >
-                <div class="cart_article_texts" >
-                  <div class="" >
+            <div class="cart_article">
+              <div class="cart_article_content">
+                <div class="cart_article_texts">
+                  <div class="">
                     <img class="cart_article_img" src="<%= asset_path 'imagen-no-disponible.jpg' %>">
                   </div>
                   <div>
                     <h1 class="cart_article_title">Product title here</h1>
-                    <h4 class="cart_article_sub" >Product description here</h4>
-                    <div class="cart_article_qty" >
-                      <div class="cart_article_qty_selector" ><span class="minus" >-</span>  <span class="qty">3</span> <span class="plus" >+</span></div>
+                    <h4 class="cart_article_sub">Product description here</h4>
+                    <div class="cart_article_qty">
+                      <div class="cart_article_qty_selector"><span class="minus">-</span> <span class="qty">3</span>
+                        <span class="plus">+</span></div>
                     </div>
                   </div>
                 </div>
-                <div class="prices" >
-                  <h3 class="cart_article_price" >3 x $2,120.00</h3>
-                  <h2 class="cart_article_price_2" >$6,820.00</h2>
+                <div class="prices">
+                  <h3 class="cart_article_price">3 x $2,120.00</h3>
+                  <h2 class="cart_article_price_2">$6,820.00</h2>
                 </div>
               </div>
             </div>
@@ -58,37 +69,35 @@
   </div>
 
   <!-- side order prices -->
-  <div class="price_section" >
-    <h1 class="title order_title" >Order</h1>
-    <div class="line line_title" ></div>
-    <div class="estimed-delivery" >
-      <p class="label" >Title</p>
-      <h3 class="shiping_date" >17 de Febrero del 2021</h3>
+  <div class="price_section">
+    <h1 class="title order_title">Order</h1>
+    <div class="line line_title"></div>
+    <div class="estimed-delivery">
+      <p class="label">Title</p>
+      <h3 class="shiping_date">17 de Febrero del 2021</h3>
     </div>
-    <div class="line" ></div>
-    <div class="checkout-prices" >
+    <div class="line"></div>
+    <div class="checkout-prices">
       <ul>
         <li class="checkout-price">
-          <span class="label" >Text</span>
+          <span class="label">Text</span>
           <span class="price_value">$7,000</span>
         </li>
         <li class="checkout-price">
-          <span class="label" >Text</span>
+          <span class="label">Text</span>
           <span class="price_value">$7,000</span>
         </li>
         <li class="checkout-price">
-          <span class="label" >Text</span>
+          <span class="label">Text</span>
           <span class="price_value">$7,000</span>
         </li>
       </ul>
     </div>
-    <div class="line" ></div>
-    <div class="checkout-total" >
-      <p class="label" >Total:</p>
+    <div class="line"></div>
+    <div class="checkout-total">
+      <p class="label">Total:</p>
       <h3>$7,000</h3>
-
     </div>
   </div>
-
 </div>
-
+</div>
