--- a/app/assets/stylesheets/components/_cart.scss
+++ b/app/assets/stylesheets/components/_cart.scss
@@ -1,3 +1,8 @@
+.steps{
+  .steps{
+    padding: 10px;
+  }
+}
 .cart_page{
   border-radius: 5px;
   display: flex;
@@ -6,7 +11,17 @@
   font-family: 'Montserrat';
     @media (max-width: 750px) {
     padding: 20px;
+  }
 
+  .header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid var(--grey-10);
+    padding: 1.5rem;
+  }
+  .next_button{
+    color: $light-blue;
   }
   .title{
     text-align: center;
@@ -14,6 +29,7 @@
     color: var(--grey-90);
     font-size: 24px;
     padding: 20px;
+    margin: auto;
   }
   .cart_section{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.14);
