--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,6 @@
   <body>
     <%= render "components/navbar"  %>
     <%= yield %>
-    <%= render "components/footer"  %>
+    <%= render "components/footer2"  %>
   </body>
 </html>
