--- a/app/views/components/_stats.html.erb
+++ b/app/views/components/_stats.html.erb
@@ -1,14 +1,15 @@
 <div class="stats_card" >
   <div class="stats_card_component" >
-    <h1 class="title" >Your title here</h1>
+    <h1 class="title" >La Farmacia #1 de México </h1>
+     <h4 class="sub_text" >No pagamos renta de locales así que tienes mejor precio</h4>
     <div class="stats" >
     <div class="stat stat_1" >
-      <h3>100K+</h3>
-      <h4 class="sub_text" >Orders delivered</h4>
+      <h3>500K+</h3>
+      <h4 class="sub_text" >Clientes satisfechos</h4>
     </div>
       <div class="stat stat_2" >
-        <h3>60K+</h3>
-        <h4 class="sub_text" >App downloaded</h4>
+        <h3>25%</h3>
+        <h4 class="sub_text" >Te ahorras</h4>
       </div>
   </div>
   </div>
